# QtTimeLine

./: .gitignore  12.json  AbstractClipInterface.h  AbstractClipModel.cpp  AbstractClipModel.h  AbstractClipModel.hpp  BasePluginLoader.cpp  BasePluginLoader.h  BaseTimeLineModel.cpp  BaseTimeLineModel.h  BaseTimeLineToolBar.cpp  BaseTimeLineToolBar.h  BaseTimeLineView.cpp  BaseTimeLineView.h  BaseTimeLineWidget.cpp  BaseTimeLineWidget.h  BaseTrackDelegate.cpp  BaseTrackDelegate.h  BaseTrackListView.cpp  BaseTrackListView.h  BaseTrackModel.cpp  BaseTrackModel.h  CMakeLists.txt  ClipTimePanel.cpp  ClipTimePanel.hpp  Compiler.hpp  DefaultTimeLineToolBar.cpp  DefaultTimeLineToolBar.h  Export.hpp  OSCMessage.h  OperatingSystem.hpp  README.md  TimeCodeDefines.h  TimeLineDefines.h  TimeLineStyle.h  resources.qrc  timelinewidget.cpp  timelinewidget.h
clips/ControlClip/: CMakeLists.txt  controlclipmodel.hpp  controlclipplugin.hpp
clips/TriggerClip/: CMakeLists.txt  triggerclipmodel.hpp  triggerclipplugin.hpp
clips/VideoClip/: CMakeLists.txt  videoclipmodel.hpp  videoclipplugin.hpp
example/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
icons/: DefaultDark.qss
